Header Search: Fixed alignment for FF

--- a/client/scss/components/_horizontal_menu.scss
+++ b/client/scss/components/_horizontal_menu.scss
@@ -44,6 +44,8 @@
 
   input {
     color: $white;
+    // Fixes FF issue
+    display: inline-block;
   }
 
   :placeholder {
